# adventure-console-game

./: .gitignore  CMakeLists.txt  README.md  main.c
game/: game.c  game.h
player/: player.c  player.h
room/: room.c  room.h
